# dtcc-template

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: installation.md  introduction.md  usage.md
src/: CMakeLists.txt  bindings.cpp
src/cpp/: dtcc_template.cpp
src/cpp/include/: complex.h
src/dtcc_package_template/: __init__.py  division.py  main.py
src/dtcc_template/: __init__.py  multiplication.py
src/include/: addition.h  complex.h  subtraction.h
tests/: test.py
tests/cpp/: CMakeLists.txt  run-tests.cpp
tests/cpp/tests/: TestFoo.h
tests/python/: tests.py
